--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@mui/styled-engine-sc": "^5.0.0",
     "cra-template": "1.1.2",
     "express": "^4.17.3",
+    "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "yarn": "^1.22.18"
   },
   "scripts": {
     "start": "react-scripts start",
